--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ plugins {
 
 group = 'com.ctsousa.econcilia'
 version = '0.2.1-SNAPSHOT'
-sourceCompatibility = '16'
+sourceCompatibility = JavaVersion.VERSION_16
+targetCompatibility = JavaVersion.VERSION_16
 
 repositories {
 	mavenCentral()
