--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,11 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+jar {
+	manifest {
+		attributes(
+			'Main-Class': 'com.ctsousa.econcilia.ApplicationStarter'
+		)
+	}
+}
