feat: incluind task stage

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
+task stage(dependsOn: ['build', 'clean'])
+build.mustRunAfter clean
+
 jar {
 	manifest {
 		attributes(
