--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -4,9 +4,9 @@ server:
 
 spring:
     datasource:
-        url: jdbc:mysql://${mysql.url}/${mysql.schema}?useSSL=true&serverTimezone=UTC&characterEncoding=UTF-8
-        username: ${mysql.username}
-        password: ${mysql.password}
+        url: ${JDBC_DATABASE_URL}
+        username: ${JDBC_DATABASE_USERNAME}
+        password: ${JDBC_DATABASE_PASSWORD}
         hikari:
             auto-commit: false
             connection-timeout: 250
