--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,5 +26,11 @@ spring:
             "[hibernate.connection.provider_disables_autocommit]": true
 
     ifood:
-        clientid: ${ifood.clientid}
-        clientsecret: ${ifood.clientsecret}
+        client-id: ${ifood.clientid}
+        client-secret: ${ifood.clientsecret}
+    urls:
+        url-ordens: https://merchant-api.ifood.com.br/order/v1.0/events:polling
+        url-comerciantes: https://merchant-api.ifood.com.br/merchant/v1.0/merchants
+        url-financeiro: https://merchant-api.ifood.com.br/financial/v2.0/merchants/
+        url-ordens-detalhes: https://merchant-api.ifood.com.br/order/v1.0/orders/
+        url-autenticacao: https://merchant-api.ifood.com.br/authentication/v1.0/oauth/token
