--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,10 +25,11 @@ spring:
             "[hibernate.generate_statistics]": false
             "[hibernate.connection.provider_disables_autocommit]": true
 
-    ifood:
+ifood:
+    credencial:
         client-id: ${ifood.clientid}
         client-secret: ${ifood.clientsecret}
-    urls:
+    hosts:
         url-ordens: https://merchant-api.ifood.com.br/order/v1.0/events:polling
         url-comerciantes: https://merchant-api.ifood.com.br/merchant/v1.0/merchants
         url-financeiro: https://merchant-api.ifood.com.br/financial/v2.0/merchants/
