feat: renomeando valores das propriedades

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,9 +29,9 @@ ifood:
     credencial:
         client-id: ${ifood.clientid}
         client-secret: ${ifood.clientsecret}
-    hosts:
-        url-ordens: https://merchant-api.ifood.com.br/order/v1.0/events:polling
-        url-comerciantes: https://merchant-api.ifood.com.br/merchant/v1.0/merchants
-        url-financeiro: https://merchant-api.ifood.com.br/financial/v2.0/merchants/
-        url-ordens-detalhes: https://merchant-api.ifood.com.br/order/v1.0/orders/
-        url-autenticacao: https://merchant-api.ifood.com.br/authentication/v1.0/oauth/token
+    resources:
+        ordens: https://merchant-api.ifood.com.br/order/v1.0/events:polling
+        comerciantes: https://merchant-api.ifood.com.br/merchant/v1.0/merchants
+        financeiro: https://merchant-api.ifood.com.br/financial/v2.0/merchants/
+        ordens-detalhes: https://merchant-api.ifood.com.br/order/v1.0/orders/
+        autenticacao: https://merchant-api.ifood.com.br/authentication/v1.0/oauth/token
