Feature/ec sprint01 yuri (#6)
* busca de comerciantes e taxas de manutenção

* melhoria chamada token

* refatoração e alteração do pacote

* Update IfoodWS.java

* incluindo as secret como variaveis de ambiente

* clientid e clientsecret opcionais como parametrio de entrada

inclusão do clientid e client secret como parametros de entrada opcionais

* URLS aplication.yaml

* feat: resolvendo problema de injecao nas properties personalizada do ifood

* feat: renomeando valores das propriedades

* ajuste requestparam

ajuste da anotação e correção da validação do clientid e clientsecret

---------

Co-authored-by: Carlos Tiago <carlostiagodesousa@gmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,13 @@ spring:
             "[hibernate.generate_statistics]": false
             "[hibernate.connection.provider_disables_autocommit]": true
 
-    ifood:
-        clientid: ${ifood.clientid}
-        clientsecret: ${ifood.clientsecret}
+ifood:
+    credencial:
+        client-id: ${ifood.clientid}
+        client-secret: ${ifood.clientsecret}
+    resources:
+        ordens: https://merchant-api.ifood.com.br/order/v1.0/events:polling
+        comerciantes: https://merchant-api.ifood.com.br/merchant/v1.0/merchants
+        financeiro: https://merchant-api.ifood.com.br/financial/v2.0/merchants/
+        ordens-detalhes: https://merchant-api.ifood.com.br/order/v1.0/orders/
+        autenticacao: https://merchant-api.ifood.com.br/authentication/v1.0/oauth/token
