--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
         open-in-view: false
         show-sql: true
         hibernate:
-            ddl-auto: none
+            ddl-auto: update
         properties:
             "[hibernate.dialect]": org.hibernate.dialect.MySQL5InnoDBDialect
             "[hibernate.generate_statistics]": false
