feat: implementacao da tabela de integracao que criacao do gateway ifood para retornar as vendas

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
         open-in-view: false
         show-sql: true
         hibernate:
-            ddl-auto: update
+            ddl-auto: none
         properties:
             "[hibernate.dialect]": org.hibernate.dialect.MySQL5InnoDBDialect
             "[hibernate.generate_statistics]": false
@@ -30,8 +30,6 @@ ifood:
         client-id: ${ifood.clientid}
         client-secret: ${ifood.clientsecret}
     resources:
-        ordens: https://merchant-api.ifood.com.br/order/v1.0/events:polling
         comerciantes: https://merchant-api.ifood.com.br/merchant/v1.0/merchants
         financeiro: https://merchant-api.ifood.com.br/financial/v2.0/merchants/
-        ordens-detalhes: https://merchant-api.ifood.com.br/order/v1.0/orders/
         autenticacao: https://merchant-api.ifood.com.br/authentication/v1.0/oauth/token
