--- a/build.gradle
+++ b/build.gradle
@@ -40,8 +40,28 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+
+	jacoco {
+		excludes = ['**/*_ExcludedCoverage*']
+	}
+
+	finalizedBy jacocoTestReport
+}
+
+tasks.register('cleanJacocoReport', Delete) {
+	delete "$buildDir/reports/jacoco"
 }
 
 jacoco {
 	toolVersion = "0.8.7"
+}
+
+jacocoTestReport {
+	dependsOn test
+	dependsOn cleanJacocoReport
+	reports {
+		xml.enabled true
+		html.enabled true
+		html.destination file("$buildDir/reports/jacoco")
+	}
 }
