--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'com.h2database:h2'
+	testImplementation 'org.hamcrest:hamcrest-all:1.3'
 
 	implementation files('libs/e-concilia-integration.jar')
 
@@ -42,7 +43,7 @@ tasks.named('test') {
 	useJUnitPlatform()
 
 	jacoco {
-		excludes = ['**/*_ExcludedCoverage*']
+		excludes = ['**/*_ExcludedCoverage.class*']
 	}
 
 	finalizedBy jacocoTestReport
